Updated config.json to remove token

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
     "API_YOUTUBE" : "AIzaSyDEdbdcXC4s0JMbyQzzUFAfqsqLmF6xgRY",
     "ID_CLIENT" : "888391034655096902",
-    "TOKEN" : "ODg4MzkxMDM0NjU1MDk2OTAy.YUSAoA.cjlY3hOQNM3wEm-JirfKpZFiKDk"
+    "TOKEN" : "ENTER TOKEN HERE"
 }
