Removed keys in config.json

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "API_YOUTUBE" : "AIzaSyDEdbdcXC4s0JMbyQzzUFAfqsqLmF6xgRY",
-    "ID_CLIENT" : "888391034655096902",
+    "API_YOUTUBE" : "ENTER YOUTUBE API KEY HERE",
+    "ID_CLIENT" : "ENTER CLIENT ID HERE",
     "TOKEN" : "ENTER TOKEN HERE"
 }
