--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,6 @@
 {
     "API_YOUTUBE" : "ENTER YOUTUBE API KEY HERE",
     "ID_CLIENT" : "ENTER CLIENT ID HERE",
+    "ID_GUILD" : "ENTER GUILD ID HERE",
     "TOKEN" : "ENTER TOKEN HERE"
 }
