--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,4 @@
 {
-    "API_YOUTUBE" : "AIzaSyDEdbdcXC4s0JMbyQzzUFAfqsqLmF6xgRY",
-    "TOKEN" : "ODg4MzkxMDM0NjU1MDk2OTAy.YUSAoA.69rsbhLb8s95PthckicOZ118mJw"
+    "API_YOUTUBE" : "YT API KEY HERE",
+    "TOKEN" : "TOKEN HERE"
 }
